# pontus

./: .gitignore  CHANGES.md  CHANGES.rst  MANIFEST.in  README.md  README.rst  constraints-legacy.txt  constraints-modern.txt  pontus-fork-maj.patch  pyproject.toml  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: README.md
docs/en/: architecture.md  known-issues.md  usage-scenarios.md  worklog.md
docs/fr/: architecture.md  known-issues.md  usage-scenarios.md  worklog.md
pontus/: __init__.py  core.py  default_behavior.py  form.py  index.py  interfaces.py  layout.py  multipleformview.py  multipleview.py  panels.py  schema.py  step.py  testing.py  util.py  view.py  view_operation.py  visual.py  widget.py  wizard.py
pontus/dace_ui_extension/: __init__.py  interfaces.py  processes.py  views.py
pontus/dace_ui_extension/templates/: assigned_users.pt  defcontainer_view.pt  mergedmultipleview.pt  (+12 more)
pontus/file/: __init__.py  util.py  view.py
pontus/locale/: pontus.pot
pontus/resources/: __init__.py
pontus/templates/: accordion.pt  accordion_item.pt  ajax_select2.pt  batching.pt  checkbox_choice.pt  empty.pt  form.pt  global_accordion.pt  line_mapping.pt  line_mapping_item.pt  mapping.pt  mapping_item.pt  master.pt  message.pt  multiview.pt  richtext.pt  select2.pt  sequence.pt  sequence_item.pt  simple_mapping.pt  simple_mapping_item.pt  submultipleview.pt  subview.pt  table.pt  table_item.pt  textinput.pt  view.pt  wizard_info.pt
pontus/tests/: test_call_selected.py  test_view_operation.py  test_views.py  test_widgets.py
tools/: doc_coverage.py
(+42 files in other folders)
